# hematopoiesis-simulator

./: .gitignore  README.md  README_RU.md  conftest.py  launcher.py  pyproject.toml  render.yaml  simulator.spec
.claude/: launch.json
Help_page/: apply_edits.py  fix_sectpr.py  help.html  hema_raw.md  hema_temp.md  hema_text.txt  hematopoiesis_simulator_docs_revised.docx
backend/: app.py  desktop_app.py  launcher.py  requirements.txt
cell_diff_sim/: __init__.py  cell.py  centriole_state.py  internal_state.py  population.py
configs/: hematopoiesis_baseline.yaml  hematopoiesis_v01.yaml  hematopoiesis_v02.yaml  hematopoiesis_v03.yaml  hematopoiesis_v04.yaml  hematopoiesis_v05.yaml  hematopoiesis_v06.yaml
docs/: App.jsx  index.html
scripts/: _sweep.py  _sweep10_dynamics.py  _sweep11_niche.py  _sweep12_nonlinear.py  _sweep13_calibrated.py  _sweep14_div_density.py  _sweep15_fate_driven.py  _sweep15b_recal.py  _sweep16_soft_control.py  _sweep17_analysis.py  _sweep17_exp_strength.py  _sweep18_hybrid.py  _sweep19_selective.py  _sweep2.py  _sweep20_recal.py  _sweep21_composition.py  _sweep22_convergence.py  _sweep2_out.txt  _sweep3.py  _sweep3_out.txt  _sweep4.py  _sweep4_out.txt  _sweep5.py  _sweep5_out.txt  _sweep6.py  _sweep6_out.txt  _sweep7.py  _sweep7_out.txt  _sweep8.py  _sweep8_out.txt  _sweep9.py  _sweep9_out.txt  _sweep_out.txt  _update_workbook.py  _update_workbook2.py  _update_workbook3.py  _update_workbook4.py  _update_workbook5.py  _update_workbook6.py  _update_workbook7.py  (+3 more)
tests/: test_cli.py  test_config.py  test_engine.py  test_internal_state.py  (+5 more)
(+37 files in other folders)
